# lab7_2

./: CMakeLists.txt  README.md
include/: multiplication_algorithms.h  utils.h
src/: html_reporter.cpp  main.cpp  multiplication_algorithms.cpp  performance_tester.cpp  test_generator.cpp
